# RandomCode

./: README.md
ChromesDinosaursGame/: .gitignore  README.md  firstCNN.py  getData.py  helperFunction.py  links.txt  opencvTry.py  saved.npy  testNuralNet.py
Gamepad_Navigator_2/: README.md  gamepadCopy.js  gamepad_navigator.user.js
M.D.A./: .angular-cli.json  .gitignore  cooLinks.txt  package.json
Project_Ra/: .gitignore  README.md  clean_csv.py  convertGoogleScraped.py  graphs.ipynb  kmeans_uncleandata.py  myId.py  prediction.py  treeRocCurve.py
SDL_First_Attempt/: CMakeLists.txt  main.cpp
SDL_First_Attempt/cmake/: FindSDL2_image.cmake
SDL_First_Attempt/src/: Collision.cpp  Collision.h  Game.cpp  Game.h  Map.cpp  Map.h  StaticGamePropertys.cpp  StaticGamePropertys.h  TextureManager.cpp  TextureManager.h  Vector2D.cpp  Vector2D.h
SDL_First_Attempt/src/ECS/: ColliderComponent.h  Components.h  ECS.h  KeyboardController.h  SpriteComponent.h  TileComponent.h  TransformComponent.h
SteamSQLApp/: ConsoleApplication3.sln  README.md
WalletApp/: package-lock.json  package.json
apiori/: gitReadMeFile.txt  info.txt  main  main.cpp  newfunction.cpp  readMe.txt  run.sh  testdata.txt
atm/: .gitignore  ATM.sln
csi385null/: README.md  shell  shell.c  shell.h
fibbage_PHP_light/: README.md  TODONEXT.md  client.html  clientAddQuestion.php  clientCreateAccount.php  clientLogIn.php  clientOptions.php  clientReviewQuestion.php  composer.json  index.html  server.html
gummyShipSamsungGearWatch/: app.js  boot.js  game.js  index.html  mainMenu.js  preloader.js
(+268 files in other folders)
